--- a/.stylelintrc
+++ b/.stylelintrc
@@ -4,5 +4,21 @@
   "rules": {
     "declaration-no-important": true,
     "indentation": [2, {"ignore": ["inside-parens"]}]
+    "at-rule-no-unknown": [
+      true,
+      {
+        "ignoreAtRules": [
+          "content",
+          "else",
+          "for",
+          "forward",
+          "if",
+          "include",
+          "mixin",
+          "each",
+          "use"
+        ]
+      }
+    ]
   }
 }
